# klik

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
modules/: config.py  utils.py
