[project]
name = "klik"
version = "1.1.0rc2"
description = "klik!! is a fun clicker game made in python"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "cryptography>=45.0.6",
    "customtkinter>=5.2.2",
    "pillow>=11.3.0",
    "platformdirs>=4.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
